# RecordType

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
examples/: CMakeLists.txt  example_AAD_112.cpp  example_division.cpp  example_dot_product.cpp  example_dyn_matrix_inverse.cpp  example_eigen_dot_product.cpp  example_eigen_llt.cpp  example_eigen_matrix_product.cpp  example_gaussian_elimination.cpp  example_llt_to_python.cpp  example_matrix_function.cpp  example_matrix_product.cpp  example_multiple_assign_bug.cpp  example_subtraction.cpp  example_to_python.cpp  save_to_dot.hpp
include/: Definitions.hpp  EigenInterop.hpp  Graph.hpp  Helper.hpp  IteratorReverser.hpp  Macros.hpp  NodeType.hpp  RecordType.hpp  ToPython.hpp  TypeTraits.hpp
test/: CMakeLists.txt  test_RT_Graph.cpp  test_RT_Graph_Intermediate_Register.cpp  test_RT_Graph_OpAssign.cpp  test_RT_Graph_Unregistered.cpp  test_RT_RecordType.cpp  test_RT_RecordType_Add.cpp  test_RT_RecordType_Compare.cpp  test_RT_RecordType_Construct.cpp  test_RT_RecordType_Cos.cpp  test_RT_RecordType_Div.cpp  test_RT_RecordType_Mul.cpp  test_RT_RecordType_Sin.cpp  test_RT_RecordType_Sqrt.cpp  test_RT_RecordType_Sub.cpp  test_RT_TypeTraits.cpp  test_RT_assert.cpp  test_RT_shared_pointer_segfault.cpp
